clusters/k3s/apps/postgres/svc-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: shared-postgres-external
  namespace: postgres
spec:
  type: LoadBalancer
  selector:
    cnpg.io/cluster: shared-postgres
    cnpg.io/instanceRole: primary  # Connect to primary for read-write
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
